[package]
name = "tiberius_sqlserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.10.0", features = ["attributes"]}
once_cell = "1.17.1"
anyhow = "1.0.0"
futures-util = "0.3"
chrono = "0.4.26"

[dependencies.tiberius]
version = "0.12.2" # The version number may change in the future
features = ["sql-browser-async-std"]
#default-features = false
